# message-blaster

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
message/: forms.py  models.py  urls.py  views.py
message/migrations/: 0001_initial.py
message/templates/message/: request_phone.html  send_message.html
message_blaster/: asgi.py  settings.py  telegram_service.py  urls.py  wsgi.py
src/message_blaster/: __init__.py
